[package]
name = "sp1-verifier"
description = "Verifier for SP1 Groth16 and Plonk proofs."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bn = { git = "https://github.com/sp1-patches/bn", tag = "substrate_bn-v0.6.0-patch-v2", package = "substrate-bn" }
bincode = "1.3.3"
sha2 = { version = "0.10.8", default-features = false }
thiserror-no-std = "2.0.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", default-features = false }
p3-baby-bear.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-symmetric.workspace = true
sp1-core-machine = { path = "../core/machine" }
sp1-primitives = { path = "../primitives" }
sp1-recursion-core = { path = "../recursion/core" }
sp1-recursion-circuit = { path = "../recursion/circuit" }
sp1-stark = { path = "../stark" }
serde = { version = "1.0.214", features = ["derive"] }
itertools = "0.10.5"

[dev-dependencies]
sp1-sdk = { workspace = true }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[features]
default = ["std"]
std = []
